# otus-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  _c_make_lists_8txt.html  annotated.html  annotated_dup.js  async_8cpp.html  async_8cpp.js  async_8cpp__incl.map  async_8cpp__incl.md5  async_8h.html  async_8h.js  async_8h__dep__incl.map  async_8h__dep__incl.md5  async_8h__incl.map  async_8h__incl.md5  async_8h_source.html  bulk_8h.html  bulk_8h__dep__incl.map  bulk_8h__dep__incl.md5  bulk_8h__incl.map  bulk_8h__incl.md5  bulk_8h_source.html  bulk__proc_8h_source.html  classGenerator-members.html  classGenerator.html  classGenerator.js  classGenerator_1_1Iterator-members.html  classGenerator_1_1Iterator.html  classGenerator_1_1Iterator.js  classGenerator_1_1Iterator__coll__graph.map  classGenerator_1_1Iterator__coll__graph.md5  classGenerator__coll__graph.map  classGenerator__coll__graph.md5  classGenerator__inherit__graph.map  classGenerator__inherit__graph.md5  classIterGenerator-members.html  classIterGenerator.html  classIterGenerator.js  classIterGenerator__coll__graph.map  (+349 more)
async/: CMakeLists.txt
async/header/: async.h
async/include/: bulk.h  bulk_proc.h  context_manager.h  workers_pool.h
async/src/: async.cpp  bulk.cpp  bulk_proc.cpp  workers_pool.cpp
async_demo/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
bayan/: CMakeLists.txt  file_dup.cpp  file_dup.h  file_list.cpp  file_list.h  log.h  main.cpp  optlog.h  wildcard.h  wildcard_impl.cpp  wildcard_impl.h
bulk_server/: CMakeLists.txt  asio.h  main.cpp  server.cpp  server.h  session.h
cmake/: docs.cmake  utils.cmake
join_server/: CMakeLists.txt  commands.h  iterable_result.cpp  iterable_result.h  main.cpp  optlog.h  server.cpp  server.h  session.cpp  session.h  storage.cpp  storage.h
join_server/test/: CMakeLists.txt  test_commands.cpp  test_difference.txt.in  test_intersection.txt.in  test_result.cpp  test_storage.cpp
mapreduce/: CMakeLists.txt  helpers.h  main.cpp  mapreduce.cpp  mapreduce.h  optlog.h  reducer.h  shuffle.h
mapreduce/test_data/: test.txt.in  test150.txt.in  test3000.txt.in  test_dub.txt.in
realty/: CMakeLists.txt  rclss.cpp  rclst.cpp  rclst_cpy.cpp  realty.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  (+34 more)
test/: CMakeLists.txt  test_file_dup.cpp  test_file_list.cpp  test_generator.cpp  test_helpers.cpp  test_shuffle.cpp  test_wildcard.cpp
test_data/: requests.csv
travis/: makedeploy.py  update-cmake.sh
